<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/settings_label"
        android:textColor="@color/textColor"
        style="@style/Heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideback_btn"
         />

    <Button
        android:id="@+id/credits_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/darkmode_switch" />

    <Button
        android:id="@+id/rateus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Rate Us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_btn" />

    <ImageButton
        android:id="@+id/guideback_btn"
        android:layout_width="46dp"
        android:backgroundTint="@color/transparent"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck,VectorDrawableCompat" />

    <Switch
        android:id="@+id/bgm_switch"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:checked="true"
        android:text="@string/bgm"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:fontFamily="@font/poppins"
        android:textSize="34sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Switch
        android:id="@+id/soundfx_switch"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:fontFamily="@font/poppins"
        android:text="@string/soundFX"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/bgm_switch"
        app:layout_constraintTop_toBottomOf="@+id/bgm_switch" />

    <Switch
        android:id="@+id/darkmode_switch"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/darkMode"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/soundfx_switch"
        app:layout_constraintStart_toStartOf="@+id/soundfx_switch"
        app:layout_constraintTop_toBottomOf="@+id/soundfx_switch" />
</androidx.constraintlayout.widget.ConstraintLayout>