<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_above="@+id/toolbar"
    android:background="@color/backgroundColor"
    tools:context=".HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="8dp">

            <ImageButton
                android:id="@+id/guide_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Guide"
                android:backgroundTint="@color/transparent"
                android:src="@android:drawable/ic_menu_help"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55" />

            <Button
                android:id="@+id/XP_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/glowingStarEmoji"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/streaks_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.526" />

            <Button
                android:id="@+id/streaks_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/streakEmoji"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.514" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                android:paddingHorizontal="8dp" >

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/welcome"
                    style="@style/Heading"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/main_lessonButton"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/black"
                    app:strokeWidth="0dp" >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/lessonimage"
                        android:backgroundTint="#CCFFFFFF"
                        android:backgroundTintMode="src_over"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Start a new lesson"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_marginHorizontal="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/main_lessonText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="What Comes Next? >>"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:layout_marginHorizontal="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/milk"
                    app:strokeWidth="0dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="vertical"
                        android:paddingVertical="16dp"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/lessonbuttonmainfrag"
                        android:backgroundTint="#CCFFFFFF"
                        android:backgroundTintMode="src_over"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/yourProgress"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/progressBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:progress="0"
                            android:max="100"
                            app:trackColor="#FFFFFF"
                            app:trackCornerRadius="5dp"
                            app:trackThickness="10dp" />

                        <TextView
                            android:id="@+id/progress_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/lessonsCompleted"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/hardWork"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textAlignment="center" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>



                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/main_playgroundButton"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/milk"
                    app:strokeWidth="0dp" >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/playgroundbuttonmainfrag"
                        android:backgroundTint="#CCFFFFFF"
                        android:backgroundTintMode="src_over"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Play a game?"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_marginHorizontal="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Visit the Playground >>"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:layout_marginHorizontal="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="50sp" />
            </LinearLayout>

        </ScrollView>

</LinearLayout>